[metadata]
name = videoxt
version = 0.1.3
description = Extract frames from videos and convert them to images or gifs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gurrutia/videoxt
author = Gerardo Urrutia
author_email = durru7@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Video
    Topic :: Utilities
keywords = video, frame, image, gif, extract, convert

[options]
packages = find:
install_requires =
    moviepy>=1.0.3
    opencv-python>=4.7.0.68
    rich>=13.3.1
python_requires = >=3.7

[options.packages.find]
exclude =
    extras*

[options.entry_points]
console_scripts =
    videoxt = videoxt.cli:main
    vxt = videoxt.cli:main

[options.extras_require]
testing =
    pytest>=7.2.2
