[metadata]
name = videoxt
version = 1.1.2-dev.4
description = Extract audio, individual frames, short clips and GIFs from videos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gurrutia/videoxt
author = Gerardo Urrutia
author_email = durru7@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Video
    Topic :: Utilities
keywords = video, frame, image, gif, audio, extract, convert, ffmpeg, moviepy, opencv

[options]
packages = find:
install_requires =
    moviepy>=1.0.3
    numpy>=1.26.1
    opencv-python>=4.8.1.78
    rich>=13.6.0
python_requires = >=3.10

[options.packages.find]
exclude =
    extras*

[options.entry_points]
console_scripts =
    videoxt = videoxt.cli:main

[options.extras_require]
testing =
    coverage>=7.3.2
    pytest>=7.4.3

[options.package_data]
videoxt = py.typed

[coverage:run]
branch = True
source = videoxt
omit =
    */setup.py

[coverage:report]
show_missing = True
skip_covered = True
